# HTeaPot

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.toml  dockerfile  hteapot.toml  readme.md
.github/workflows/: publish.yml
demo/: config.toml
demo/public/: index.js  serverman.txt
demo/public/subfolder/: index.html
docs/: CONTRIBUTING.md  Configuration.md  api.md  index.md  readme-es.md
docs/readme_i18n/: README_ES.md
examples/: basic.rs  basic2.rs  proxy_con.rs  stream.rs
kubernetes/: deploy.yml  service.yml  volume.yml
public/: index.html
src/: brew.rs  cache.rs  config.rs  hteapot.rs  logger.rs  main.rs  shutdown.rs  utils.rs
src/handler/: cgi.rs  file.rs  handler.rs  mod.rs  proxy.rs
src/hteapot/: brew.rs  cgi.rs  engine.rs  methods.rs  mod.rs  request.rs  response.rs  status.rs
src/hteapot/brew/: mod.rs  parser.rs
src/hteapot/http/: headers.rs  methods.rs  mod.rs  status.rs
src/http_responders/: file.rs  mod.rs  proxy.rs
src/responders/: mod.rs  proxy.rs
src/serves/: mod.rs  serve.rs
