[package]
name = "hteapot"
version = "0.4.1"
exclude = ["hteapot.toml", "public/", "readme.md"]
license = "MIT"
keywords = ["HTTP", "HTTP-SERVER"]
description = "HTeaPot is a lightweight HTTP server library designed to be easy to use and extend."
homepage = "https://github.com/az107/HTeaPot"
repository = "https://github.com/az107/HTeaPot"
readme = "readme.md"
categories = ["network-programming", "web-programming"]
authors = ["Alb Ruiz G. <me@albruiz.dev>"]

[features]
ssl = ["native-tls"]


[lib]
name = "hteapot"
path = "src/hteapot/mod.rs"


[[bin]]
name = "hteapot"

[dependencies]
native-tls = { version = "0.2.12", optional = true }
