[package]
name = "hteapot"
version = "0.6.0"
edition = "2024"
authors = ["Alb Ruiz G. <me@albruiz.dev>"]
description = "HTeaPot is a lightweight HTTP server library designed to be easy to use and extend."
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/hteapot/"
homepage = "https://hteapot.albruiz.dev"
repository = "https://github.com/az107/HTeaPot"
keywords = ["http", "server", "web", "lightweight", "rust"]
categories = [
    "network-programming",
    "web-programming",
    "command-line-utilities",
]
exclude = ["config.toml", "demo/", "README.md"]

[lib]
name = "hteapot"
path = "src/hteapot/mod.rs"

[[bin]]
name = "hteapot"

[dependencies]
libc = "0.2.172"


[package.metadata.docs.rs]
no-readme = true
